--- a/index.html
+++ b/index.html
@@ -288,31 +288,25 @@
         </div>
     </footer>
     <script>
-        window.onload = async () => {
-            try {
-                // Wait for Jupiter to be available
-                while (!window.Jupiter) {
-                    await new Promise(resolve => setTimeout(resolve, 100));
-                }
-                
-                const container = document.getElementById("jupiter-terminal-container");
-                
-                // Use Jupiter.Terminal instead of JupiterTerminal
-                new window.Jupiter.Terminal({
-                    containerElement: container,
-                    endpoint: "https://api.mainnet-beta.solana.com",
-                    platformFeeAndAccounts: {
-                        feeBps: 0,
-                        feeAccounts: [],
-                    },
-                    defaultInputMint: "So11111111111111111111111111111111111111112", // SOL
-                    defaultOutputMint: "gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump", // $BRACE token address
-                    displayMode: "modal",
-                });
-            } catch (err) {
-                console.error("Error initializing Jupiter Terminal:", err);
+        document.addEventListener("DOMContentLoaded", () => {
+            const container = document.getElementById("jupiter-terminal-container");
+
+            if (!container) {
+                console.error("Jupiter terminal container not found!");
+                return;
             }
-        };
+
+            new window.JupiterTerminal(container, {
+                endpoint: "https://api.mainnet-beta.solana.com", // Solana RPC
+                platformFeeAndAccounts: {
+                    feeBps: 0, // 0% fee
+                    feeAccounts: [],
+                },
+                defaultInputMint: "So11111111111111111111111111111111111111112", // SOL token address
+                defaultOutputMint: "gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump", // BRACE token address
+                displayMode: "inline", // Ensure inline rendering
+            });
+        });
     </script>
 </body>
 </html>
