--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             margin-bottom: 2rem;
         }
     </style>
-    <script src="https://unpkg.com/@jup-ag/widget@latest"></script>
+    <script src="https://terminal.jup.ag/main-v2.js"></script>
 </head>
 <body class="bg-gradient-to-b from-[#d5bf9b] to-[#f9f4f0] min-h-screen">
     <!-- Modern floating navigation -->
@@ -288,24 +288,37 @@
         </div>
     </footer>
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const container = document.getElementById("jupiter-terminal");
+        window.addEventListener('load', async () => {
+            try {
+                const terminal = window.Jupiter.Terminal;
+                const container = document.getElementById("jupiter-terminal");
 
-            if (!container) {
-                console.error("Jupiter terminal container not found!");
-                return;
+                if (!container) {
+                    console.error("Jupiter terminal container not found!");
+                    return;
+                }
+
+                terminal.render({
+                    containerElement: container,
+                    endpoint: "https://api.mainnet-beta.solana.com",
+                    platformFeeAndAccounts: {
+                        feeBps: 0,
+                        feeAccounts: [],
+                    },
+                    defaultInputMint: "So11111111111111111111111111111111111111112", // SOL
+                    defaultOutputMint: "gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump", // BRACE
+                    displayMode: "inline",
+                    integratedTargetId: "jupiter-terminal",
+                    containerStyles: {
+                        display: 'block',
+                        width: '100%',
+                        height: '600px',
+                        borderRadius: '12px',
+                    }
+                });
+            } catch (err) {
+                console.error("Error initializing Jupiter Terminal:", err);
             }
-
-            new window.JupiterTerminal(container, {
-                endpoint: "https://api.mainnet-beta.solana.com", // Solana RPC
-                platformFeeAndAccounts: {
-                    feeBps: 0, // 0% fee
-                    feeAccounts: [],
-                },
-                defaultInputMint: "So11111111111111111111111111111111111111112", // SOL token address
-                defaultOutputMint: "gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump", // BRACE token address
-                displayMode: "inline", // Ensure inline rendering
-            });
         });
     </script>
 </body>
